<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainview"
    tools:context="${relativePackage}.${activityClass}" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:orientation="vertical" >
                        
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" " />

            
                        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" " />

            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:orientation="horizontal" >
                        
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opt_bt4spinhead"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <Spinner
                    android:id="@+id/BT4Spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>
                        
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" " />
            
            <Button
                android:id="@+id/FindBT4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_startscan"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" " />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" " />
            
            <Button
                android:id="@+id/TestBT4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_test"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" " />
            
                        
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_head" />
            
                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
    
                        <CheckBox
                            android:id="@+id/cb_nosnd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/check_nosnd" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
    
                        <CheckBox
                            android:id="@+id/cb_defaultsnd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/check_defaultsnd" />

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <CheckBox
                            android:id="@+id/cb_builtinsnd"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/check_builtinsnd" />
                        
                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <CheckBox
                            android:id="@+id/cb_notifsnd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/check_notifsnd" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
    
                        <CheckBox
                            android:id="@+id/cb_filesnd"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/check_filesnd" />
                        
                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
    
                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
    
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" " />
            
                        
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Version"
                />

            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" " />

            
            </LinearLayout>
            
</RelativeLayout>
